-Cyber dogs now forget their target when sat

--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -6,7 +6,8 @@ license="All Rights Reserved"
 modId="choups_cyber_dogs"
 version="1.0.0"
 displayName="Choup's Cyber Dogs"
-displayURL="https://mcreator.net"
+displayURL="https://github.com/Choupiclou/Choup-s-Cyber-Dog-Mod"
+logoFile="logo.png"
 credits="Created by choup !"
 authors="choup, MCreator"
 
