-Added the new Slot Upgrade Item and System -New config -New crafts

--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -10,6 +10,7 @@ displayURL="https://github.com/Choupiclou/Choup-s-Cyber-Dog-Mod"
 logoFile="logo.png"
 credits="Created by choup !"
 authors="choup, MCreator"
+description="Add cool cyber dogs to MC!"
 
 # Start of user code block mod configuration
 # End of user code block mod configuration
